--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-spring.application.name=livros
+spring.application.name=projeto_livro_db
 
-# data source
+# DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://dpg-d13k28ali9vc738lj6c0-a.oregon-postgres.render.com:5432/projeto_livro_db?sslmode=require
+spring.datasource.username=projeto_livro_db_user
+spring.datasource.password=keLBd0pCVp1EAI110Em7lSytowdfILxN
 
-# jpa
+# JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-server.port = 8090
+server.port=8090
